--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
+alabaster==0.7.7
+asn1crypto==0.22.0
+backports.shutil-get-terminal-size==1.0.0
+blinker==1.4
+catkin-pkg==0.2.10
+certifi==2017.4.17
+cffi==1.10.0
+chardet==3.0.3
+click==6.7
+coverage==4.0.3
+cryptography==1.9
+cycler==0.9.0
+docutils==0.12
+ecdsa==0.13
+empy==3.3.2
+enum34==1.1.6
+et-xmlfile==1.0.1
+first==2.0.1
 Flask==0.12.2
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
@@ -9,13 +27,66 @@ Flask-WTF==0.14.2
 funcsigs==0.4
 gspread==0.6.2
 gunicorn==19.7.1
+httplib2==0.10.3
+idna==2.5
+ipaddress==1.0.18
+itsdangerous==0.24
+jdcal==1.3
 Jinja2==2.8
+MarkupSafe==0.23
+matplotlib==1.5.1
+mock==1.3.0
+MySQL-python==1.2.5
+netifaces==0.10.4
+nose==1.3.7
 numpy==1.10.4
 oauth2client==4.1.2
 openpyxl==2.4.7
+paramiko==1.16.0
+passlib==1.7.1
+pathlib==1.0.1
+pbr==3.1.1
+pew==0.1.26
+Pillow==3.1.0
+pip-tools==1.9.0
+pipenv==7.0.2
+protobuf==2.6.1
+psutil==3.4.2
+psycopg2==2.7.1
+pyasn1==0.3.4
+pyasn1-modules==0.1.4
+pycparser==2.18
+pycrypto==2.6.1
+pydot==1.0.2
+Pygments==2.1
+pygraphviz==1.3.1
+PyOpenGL==3.1.0
+pyparsing==2.0.7
 python-dateutil==2.4.2
+pythonz-bd==1.11.4
 pytz==2015.7
 requests==2.16.0
 rosdep==0.11.4
+rosdistro==0.4.2
+rosinstall==0.7.7
+rosinstall-generator==0.1.11
+rospkg==1.0.38
+rsa==3.4.2
+semver==2.7.8
+shutilwhich==1.1.0
 simplejson==3.10.0
+six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.3.4
+sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.1.10
+stevedore==1.26.0
+urllib3==1.21.1
+vcstools==0.1.38
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.8.1
+Werkzeug==0.12.2
+wstool==0.1.12
+WTForms==2.1
+yahoo-finance==1.4.0
